Sun Apr 21 15:30:21 2002  Owen Taylor  <otaylor@redhat.com>

	* spec/xembed-spec.xml: Typo fixes from Matthias Clasen,
	spelling checked.

Sun Apr 21 09:20:30 2002  Owen Taylor  <otaylor@redhat.com>

	* Reorganize, add test cases in tests/

Sat Apr 20 15:46:27 2002  Owen Taylor  <otaylor@redhat.com>

	* xembed-spec.xml: XML fixes.

Sat Apr 20 13:00:18 2002  Owen Taylor  <otaylor@redhat.com>

	* Import into CVS.
